--- a/src/components/Experiences/experiences.css
+++ b/src/components/Experiences/experiences.css
@@ -100,6 +100,7 @@
 }
 
 /************************* EXP Menu *********************************/
+
 #ExperienceAnimation{
   z-index: 1;
 }
@@ -152,7 +153,7 @@
 }
 
 .scrollLine {
-  background-color: var(--primary-light-green);
+  /* background-color: var(--primary-light-green);
   border-radius: 16px;
   border-color: var(--primary-purple);
 
@@ -161,10 +162,39 @@
   box-shadow: 0 0 1.95rem var(--primary-light-green);
   height: 0.3rem;
   width: 12rem;
-  opacity: 0;
+  opacity: 0; */
   margin: auto;
-  margin-top: 0.25rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.25rem;
+}
+
+
+#expCategoryMenu{
+  overflow: auto;
+}
+/* Handle */
+::-webkit-scrollbar {
+  width: 1rem;
+  height: 0.5rem !important;
+
+}
+
+/* Track */
+::-webkit-scrollbar-track:horizontal {
+  /* box-shadow: inset 0 0 0.5rem var(--darkest-navy);  */
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb:horizontal  {
+  background-color: var(--primary-light-green);
+  border-radius: 16px;
+  border-color: var(--primary-purple);
+  box-shadow: none;
+  border-width: 0.125rem;
+  border-style: solid;
+  height: 0.3rem;
+  width: 12rem;
 }
 
 /************************* EXP Information *********************************/
