--- a/src/components/PlayRefresh/playRefresh.css
+++ b/src/components/PlayRefresh/playRefresh.css
@@ -1,22 +1,22 @@
 .btnRefresh {
   background-color: "none";
-  border: 0.25rem var(--light-slate) solid;
+  border: 0.3rem var(--light-slate) solid;
   border-radius:50%;
   width:5rem;
   height:5rem;
   opacity: 0;
   pointer-events: none;
   display: none;
+  transition: var(--transition);  
 }
 
 .btnPlay {
-  background-color: "transparent";
+  background-color: var(--navy);
   border: 0.3rem var(--light-slate) solid;
   border-radius:50%;
   width:5rem;
   height:5rem;
-  
-  
+  transition: var(--transition);  
 }
 
 .fntAwesome {
@@ -24,9 +24,27 @@
   height: 1rem;
 }
 
-.fntAwesome:hover{
+
+.btnPlay:hover {
+  border: 0.3rem var(--lightest-slate) solid;
+  background-color: var(--dark-navy);
+}
+
+.btnPlay:hover > .fntAwesome {
   color:var(--tint-navy) !important;
 }
+
+
+.btnRefresh:hover {
+  border: 0.3rem var(--lightest-slate) solid;
+  background-color: var(--dark-navy);
+}
+
+.btnRefresh:hover > .fntAwesome {
+  color:var(--tint-navy) !important;
+  
+}
+
 
 .row {
   width: 100%;
